# gravity

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  main.cpp
include/gravity/: BarnesHutAlgorithm.h  Body.h  Gravity.h  IGravitationalField.h  IGravity.h  IParticle.h  IPointMass.h  MassCalculator.h  Newtonian.h  NewtonianField.h  Node.h  Octree.h  Particle.h  Plummer.h  PlummerField.h  PointMass.h  Vector.h
include/gravity/barneshut/: BoundingBox.h  DynamicOctree.h  Hypercube.h  IShape.h  Octree.h  Orthant.h  StaticOctree.h  Tree.h
include/gravity/except/: AsyncError.h  ErrorList.h  async_error.h
include/gravity/forces/: IField.h  IGravitationalField.h  NewtonianField.h  PlummerField.h
include/gravity/geometry/: BoundingBox.h  IShape.h  Octree.h  Orthant.h  Vector.h
include/gravity/threads/: AbstractTask.h  ITask.h  Indicator.h  Task.h  TaskQueue.h  ThreadPool.h
src/: BarnesHutAlgorithm.cpp  Body.cpp  CMakeLists.txt  Gravity.cpp  MassCalculator.cpp  Node.cpp  Octree.cpp
src/barneshut/: BoundingBox.cpp  DynamicOctree.cpp  Hypercube.cpp  Octree.cpp  StaticOctree.cpp  Tree.cpp
src/except/: ErrorList.cpp
src/forces/: IField.cpp
src/geometry/: BoundingBox.cpp  Octree.cpp
src/threads/: TaskQueue.cpp  ThreadPool.cpp
